--- a/not_Found.html
+++ b/not_Found.html
@@ -8,7 +8,7 @@
 <body>
   <h1>404</h1>
   <p>І от ви вже біжете від яких ось гопників</p>
-  <img src="/img/gop-stop.jpg" alt="гопники">
+  <img src="img/gop-stop.jpg" alt="гопники">
   <div><a href="index.html">Повертаємось!</a></div>
 </body>
 </html>
