--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img
             src="img/header.svg"
             alt="Лисий хлопець в окулярах і шарфі надягає шапку."
-            width="300px"
+            width="300"
           />
           <div>
             <ul>
@@ -95,7 +95,7 @@
         </div>
         <div id="footer">
           <h3>&lt;footer&gt; — мудрий та невидимий герой</h3>
-          <img src="img/footer.svg" alt="крокси с песеком." width="300px" />
+          <img src="img/footer.svg" alt="крокси с песеком." width="300" />
           <div>
             <ul>
               <li>
@@ -132,7 +132,7 @@
           <img
             src="img/main.webp"
             alt="Хлопець у футбольці я головний."
-            width="300px"
+            width="300"
           />
           <div>
             <ul>
@@ -164,7 +164,7 @@
         <img
           src="img/div.svg"
           alt="Двоє людей: зліва перший з ірокезом і весь у татуюваннях тегами &lt;div&gt;, справа другий дивиться на нього і прикрив долонею рот від здивування."
-          width="300px"
+          width="300"
         />
         <div>
           <ul>
@@ -199,7 +199,7 @@
         <img
           src="img/a.jpeg"
           alt="Двоє людей: зліва перший з ірокезом і весь у татуюваннях тегами &lt;div&gt;, справа другий дивиться на нього і прикрив долонею рот від здивування."
-          width="300px"
+          width="300"
         />
         <h5>
           HTML-теги живуть своїм життям, і деякі з них обожнюють подорожі.
@@ -294,7 +294,7 @@
         <img
           src="img/h1_h6.svg"
           alt="Стіна з картинами різних розмірів, зверху найбільша, далі менша і ще менша."
-          width="350px"
+          width="350"
         />
         <div>
           <h4>&lt;h1&gt; — головний, у нього голос найгучніший:</h4>
@@ -357,7 +357,7 @@
         <img
           src="img/p.png"
           alt="Чоловік сидить на сходах,а його ніхто не помічає, всі тінню проходять повз"
-          width="350px"
+          width="350"
         />
         <div>
           <ul>
@@ -389,7 +389,7 @@
         <img
           src="img/br.jpg"
           alt="ведьмідь у шапці, пьє щось з бутилки"
-          width="300px"
+          width="300"
         />
         <div>
           <ul>
@@ -432,7 +432,7 @@
         <img
           src="img/img.svg"
           alt="Лежить дівчина в тозі, в античному стилі, і вказує рукою на браузер, де відкрита картинка з дівчиною в абстракції."
-          width="300px"
+          width="300"
         />
         <div>
           <ul>
@@ -476,7 +476,7 @@
           <img
             src="img/ul.svg"
             alt="Тарілка з ролами, підписана UL, і окремий рол, підписаний LI."
-            width="300px"
+            width="300"
           />
           <div>
             <ul>
@@ -517,7 +517,7 @@
           <img
             src="img/ol.jpg"
             alt="Цифри з ручками, ніжками та крилами"
-            width="300px"
+            width="300"
           />
           <div>
             <ul>
@@ -538,7 +538,7 @@
           <img
             src="img/li.jpg"
             alt="Детальки пузлика різних відтинків коричневого"
-            width="300px"
+            width="300"
           />
           <div>
             <ul>
