--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <li>
                   <a
                     href="https://www.youtube.com/watch?v=yJcCKuxfb2o&list=PLM6XATa8CAG4F9nAIYNS5oAiPotxwLFIr"
-                    target="blank"
+                    target="_blank"
                     title="посилання на найкращий безкоштовний курс з верстки у всесвіті"
                     >Я знаю круте місце, але нам доведеться їхати на двох
                     машинах.</a
@@ -237,7 +237,7 @@
                 <li>
                   <a
                     href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                    target="blank"
+                    target="_blank"
                     title="посилання на кліп пісні Rick Astley – Never Gonna Give You Up"
                     >Тут дуже корисна інформація! Натискай!</a
                   >
