--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               &lt;a&gt; це той самий друг, який завжди каже:
               <ul>
                 <li>
-                  <a href="./not_found.html" title="Ходімо це буде круто!"
+                  <a href="not_found.html" title="Ходімо це буде круто!"
                     >«Ходімо, у мене є крута ідея!»</a
                   >
                 </li>
