--- a/not_Found.html
+++ b/not_Found.html
@@ -9,6 +9,6 @@
   <h1>404</h1>
   <p>І от ви вже біжете від яких ось гопників</p>
   <img src="img/gop-stop.jpg" alt="3 гопникa у червоній сірій та чорній куртці, йдуть когось бити" width="300">
-  <div><a href="index.html">Повертаємось!</a></div>
+  <div><a href="index.html">Повертаємось!!</a></div>
 </body>
 </html>
