--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -320,21 +320,23 @@
           Maecenas lacinia felis nec placerat sollicitudin. Quisque placerat
           dolor at scelerisque imperdiet. Phasellus tristique felis dolor.
         </h3>
-        <p>
-          Maecenas elementum in risus sed condimentum. Duis convallis ante ac
-          tempus maximus. Fusce malesuada sed velit ut dictum. Morbi faucibus
-          vitae orci at euismod. Integer auctor augue in erat vehicula, quis
-          fermentum ex finibus.
-        </p>
-        <p>
-          Mauris pretium elit a dui pulvinar, in ornare sapien euismod. Nullam
-          interdum nisl ante, id feugiat quam euismod commodo. Sed ultrices
-          lectus ut iaculis rhoncus. Aenean non dignissim justo, at fermentum
-          turpis. Sed molestie, ligula ut molestie ultrices, tellus ligula
-          viverra neque, malesuada consectetur diam sapien volutpat risus.
-          Quisque eget tortor lobortis, facilisis metus eu, elementum est. Nunc
-          sit amet erat quis ex convallis suscipit. ur ridiculus mus.
-        </p>
+        <div>
+          <p>
+            Maecenas elementum in risus sed condimentum. Duis convallis ante ac
+            tempus maximus. Fusce malesuada sed velit ut dictum. Morbi faucibus
+            vitae orci at euismod. Integer auctor augue in erat vehicula, quis
+            fermentum ex finibus.
+          </p>
+          <p>
+            Mauris pretium elit a dui pulvinar, in ornare sapien euismod. Nullam
+            interdum nisl ante, id feugiat quam euismod commodo. Sed ultrices
+            lectus ut iaculis rhoncus. Aenean non dignissim justo, at fermentum
+            turpis. Sed molestie, ligula ut molestie ultrices, tellus ligula
+            viverra neque, malesuada consectetur diam sapien volutpat risus.
+            Quisque eget tortor lobortis, facilisis metus eu, elementum est. Nunc
+            sit amet erat quis ex convallis suscipit. ur ridiculus mus.
+          </p>
+        </div>
       </div>
     </main>
 
