--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -316,11 +316,11 @@
       </div>
       <div id="task_02" class="task2-section">
         <h2>Друге завдання</h2>
-        <h3>
-          Maecenas lacinia felis nec placerat sollicitudin. Quisque placerat
-          dolor at scelerisque imperdiet. Phasellus tristique felis dolor.
-        </h3>
         <div>
+          <p>
+            Maecenas lacinia felis nec placerat sollicitudin. Quisque placerat
+            dolor at scelerisque imperdiet. Phasellus tristique felis dolor.
+          </p>
           <p>
             Maecenas elementum in risus sed condimentum. Duis convallis ante ac
             tempus maximus. Fusce malesuada sed velit ut dictum. Morbi faucibus
@@ -333,7 +333,8 @@
             lectus ut iaculis rhoncus. Aenean non dignissim justo, at fermentum
             turpis. Sed molestie, ligula ut molestie ultrices, tellus ligula
             viverra neque, malesuada consectetur diam sapien volutpat risus.
-            Quisque eget tortor lobortis, facilisis metus eu, elementum est. Nunc
+            Quisque eget tortor lobortis, facilisis metus eu, elementum est.
+            Nunc
             sit amet erat quis ex convallis suscipit. ur ridiculus mus.
           </p>
         </div>
