--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <p>Ласкаво просимо до Гріндвартсу – школи чарівної верстки</p>
+      <p>Ласкаво просимо до Грідвартсу – школи чарівної верстки</p>
       <p>
         -------------------------------------------------------------------------------
       </p>
@@ -346,7 +346,7 @@
         -------------------------------------------------------------------------------
       </p>
       <p>
-        © Гріндвартс. Усі права захищені чарами
+        © Грідвартс. Усі права захищені чарами
         <span class="charm-name">copyrightus protectus</span>
         .
       </p>
