white line for blau card was added

--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <h2 class="title">SOX Management</h2>
                     <div class="line-container">
-                      <img src="img/red-line.svg" alt="red line">
+                      <img src="img/white-line.svg" alt="red line">
                     </div>
                     <p class="description">The gradual information about atomic
                       behaviour...</p>
