negative margin was added for right constuction

--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -32,8 +32,8 @@
                   environment.</p>
               </div>
               <div class="cards-block">
-                <div class="card-item-container">
-                  <div class="cards-item">
+                <div class="card-container">
+                  <div class="card">
                     <div class="icon-container">
                       <img src="img/icon1.svg"
                         alt="A purple building featuring a prominent clock on its facade, showcasing a unique architectural design.">
@@ -45,8 +45,8 @@
                       about </p>
                   </div>
                 </div>
-                <div class="card-item-container lowered">
-                  <div class="cards-item">
+                <div class="card-container lowered">
+                  <div class="card">
                     <div class="icon-container">
                       <img src="img/icon2.svg"
                         alt="A green book with an open cover displaying a brain illustration inside, symbolizing knowledge and intelligence.">
@@ -59,8 +59,8 @@
                       information about</p>
                   </div>
                 </div>
-                <div class="card-item-container">
-                  <div class="cards-item blau">
+                <div class="card-container">
+                  <div class="card blau">
                     <div class="icon-container">
                       <img src="img/icon3.svg"
                         alt=" Icon of a graduation cap resting on a stack of books, symbolizing education and academic achievement.">
@@ -73,8 +73,8 @@
                       behaviour...</p>
                   </div>
                 </div>
-                <div class="card-item-container lowered">
-                  <div class="cards-item">
+                <div class="card-container lowered">
+                  <div class="card">
                     <div class="icon-container">
                       <img src="img/icon4.svg"
                         alt="A person stands confidently in front of a group, engaging them with a presentation or speech.">
