class item for li was removed

--- a/homework_06/index.html
+++ b/homework_06/index.html
@@ -43,12 +43,12 @@
                 luctus elementum neque et pharetra.
               </p>
               <ul class="list">
-                <li class="item">100 g of fresh leaves provides.</li>
-                <li class="item">
+                <li>100 g of fresh leaves provides.</li>
+                <li>
                   Aliquam ac est at augue volutpat elementum.
                 </li>
-                <li class="item">Quisque nec enim eget sapien molestie.</li>
-                <li class="item last-element">
+                <li>Quisque nec enim eget sapien molestie.</li>
+                <li class="last-element">
                   Proin convallis odio volutpat finibus posuere.
                 </li>
               </ul>
