tel and adress is a link

--- a/homework_06/index.html
+++ b/homework_06/index.html
@@ -110,13 +110,13 @@
                 <li class="contact-item telefon">
                   <div class="text-content">
                     <h3>Give Us a Call</h3>
-                    <p>(110) 1111-1010</p>
+                    <a href="tel:+11011111010">(110) 1111-1010</a>
                   </div>
                 </li>
                 <li class="contact-item email">
                   <div class="text-content">
                     <h3>Send Us a Message</h3>
-                    <p>Contact@HydraVTech.com</p>
+                    <a href="mailto:Contact@HydraVTech.com">Contact@HydraVTech.com</a>
                   </div>
                 </li>
               </ul>
