--- a/homework_07/index.html
+++ b/homework_07/index.html
@@ -25,14 +25,14 @@
         <h2>Task 01</h2>
         <div class="section-experts">
           <div class="container">
-            <h3>Meet our <br><span>Professional Faculty</span></h3>
+            <h3>Meet our <br><strong>Professional Faculty</strong></h3>
             <ul>
               <li>
                 <div>
-                  <div>
+                  <a href="#">
                     <img src="img/expert_1.png" alt>
-                  </div>
-                  <h4>Albert Flores</h4>
+                  </a>
+                  <h4><a href="#">Albert Flores</a></h4>
                   <p>
                     Founder of FeatherDev Academy Masters in Finance |
                     University
@@ -43,10 +43,10 @@
               </li>
               <li>
                 <div>
-                  <div>
+                  <a href="#">
                     <img src="img/expert_2.png" alt>
-                  </div>
-                  <h4>Arlene McCoy</h4>
+                  </a>
+                  <h4><a href="#">Arlene McCoy</a></h4>
                   <p>
                     15 Year + Experience in Teaching and Former RBI Grade B
                     Employee. Have Qualified USMLE Mains twice and is just like
@@ -58,16 +58,17 @@
               </li>
               <li>
                 <div>
-                  <div>
+                  <a href="#">
                     <img src="img/expert_3.png" alt>
-                  </div>
-                  <h4>Annette Black</h4>
+                  </a>
+                  <h4><a href="#">Annette Black</a></h4>
                   <p>
                     10 Year + Experience in Teaching and Former Civil Servant.
                     Specialized in teaching History and no student wants to miss
                     their class.
                   </p>
                   <a href="#">Read more</a>
+
                 </div>
               </li>
             </ul>
@@ -78,13 +79,13 @@
         <h2>Task 02</h2>
         <div class="section-best-faculty">
           <div class="container">
-            <div>
-              <h3>Best Faculty from New York is <br><span>Now Available in
-                  California!</span></h3>
-              <p>
-                Our Faculty is common in all the branches which helps us to
-                maintain the quality education across India. Now there is no need
-                to go anywhere!
+            <div class="text-section">
+              <h3>Best Faculty from New York is <br><strong>Now Available in
+                  California!</strong>
+              </h3>
+              <p>Our Faculty is common in all the branches which helps us to
+                maintain the quality education across India. Now there is no
+                need to go anywhere!
               </p>
               <ul>
                 <li>Learn from Top Educators in your city</li>
