--- a/homework_07/index.html
+++ b/homework_07/index.html
@@ -30,7 +30,7 @@
               <li>
                 <div>
                   <a href="#">
-                    <img src="img/expert_1.png" alt>
+                    <img src="img/expert_1.png" alt="A smiling man wearing a necklace, showcasing a warm and friendly expression.">
                   </a>
                   <h4><a href="#">Albert Flores</a></h4>
                   <p>
@@ -44,7 +44,7 @@
               <li>
                 <div>
                   <a href="#">
-                    <img src="img/expert_2.png" alt>
+                    <img src="img/expert_2.png" alt="A young woman in a suit and tie sits confidently in front of a vibrant orange wall, exuding professionalism and style">
                   </a>
                   <h4><a href="#">Arlene McCoy</a></h4>
                   <p>
@@ -59,7 +59,7 @@
               <li>
                 <div>
                   <a href="#">
-                    <img src="img/expert_3.png" alt>
+                    <img src="img/expert_3.png" alt="A smiling man with long hair is dressed in a blue shirt, exuding a friendly demeanor.">
                   </a>
                   <h4><a href="#">Annette Black</a></h4>
                   <p>
