--- a/homework_08/index.html
+++ b/homework_08/index.html
@@ -34,7 +34,7 @@
                 <h2>Іконки</h2>
                 <div class="item">
                   <div class="img-container">
-                    <img src="img/down-arrow.svg" alt = "arrow down">
+                    <img src="img/down-arrow.svg" alt="arrow down">
                   </div>
                   <ul class="description">
                     <li>Іконка, векторне</li>
@@ -217,32 +217,59 @@
                 <h2>Контентні зображення</h2>
                 <div class="item">
                   <div class="img-container">
-                    <img src="img/logo-white.avif" alt="logo">
+                    <img src="img/logo-white-3x.avif" alt="logo">
                   </div>
                   <ul class="description">
                     <li>Контентне зображення, растрове</li>
                     <li>Має прозорість -> png</li>
-                    <li>❌png -> 18kB</li>
-                    <li>❌webp -> 11kB</li>
-                    <li>✅avif -> 8kB</li>
+                    <li>Вигрузила 3x щоб була краща якість</li>
+                    <li>1x:
+                      <ul>
+                        <li>❌png -> 18kB</li>
+                        <li>❌webp -> 11kB</li>
+                        <li>✅avif -> 8kB</li>
+                      </ul>
+                    </li>
+                    <li>3x:
+                      <ul>
+                        <li>❌png -> 87kB</li>
+                        <li>❌webp -> 34kB</li>
+                        <li>✅avif -> 28kB</li>
+                      </ul>
+                    </li>
                   </ul>
                 </div>
                 <div class="item">
                   <div class="img-container">
-                    <img src="img/logo-black.avif" alt="logo">
+                    <img src="img/logo-black-3x.avif" alt>
                   </div>
                   <ul class="description">
                     <li>Контентне зображення, растрове</li>
                     <li>Має прозорість -> png</li>
-                    <li>❌png -> 21kB</li>
-                    <li>❌webp -> 10kB</li>
-                    <li>✅avif -> 7kB</li>
+                    <li>Вигрузила 3x щоб була краща якість</li>
+                    <li>1x:
+                      <ul>
+                        <li>❌png -> 21kB</li>
+                        <li>❌webp -> 10kB</li>
+                        <li>✅avif -> 7kB</li>
+                      </ul>
+                    </li>
+                    <li>3x:
+                      <ul>
+                        <li>❌png -> 103kB</li>
+                        <li>❌webp -> 47kB</li>
+                        <li>✅avif -> 21kB</li>
+                      </ul>
+                    </li>
+
                   </ul>
                 </div>
                 <div class="item">
                   <div class="img-container">
                     <picture>
-                      <source srcset="img/header-banner-1x.avif 1x, img/header-banner-2x.avif 2x, img/header-banner-3x.avif 3x" type="image/avif">
+                      <source
+                        srcset="img/header-banner-1x.avif 1x, img/header-banner-2x.avif 2x, img/header-banner-3x.avif 3x"
+                        type="image/avif">
                       <img src="img/header-banner-1x.avif" alt="some image">
                     </picture>
                   </div>
