section intro was added

--- a/homework_09/index.html
+++ b/homework_09/index.html
@@ -6,7 +6,7 @@
     <link
       href="https://fonts.googleapis.com/css?family=Lobster:regular&display=swap"
       rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
     <link
       href="https://fonts.googleapis.com/css?family=Bungee+Tint:regular&display=swap"
       rel="stylesheet">
@@ -69,7 +69,7 @@
             </div>
           </div>
         </div>
-        <!-- section -->
+        <!-- section-featured -->
         <div class="section-featured">
           <div class="section-featured__container">
             <!-- section header -->
@@ -91,9 +91,9 @@
                   <img class="product-card__img" src="img/product-1.avif"
                     alt="product picture">
                 </div>
-                <h3 class="product-card__name">Green Capsicum</h3>
-                <p class="product-card__price price">$14.99</p>
-                <p class="product-card__price price price--old">$20.99</p>
+                <h3 class="product-card__name body-small">Green Apple</h3>
+                <p class="product-card__price body-medium">$14.99</p>
+                <p class="product-card__price body-medium body-medium--old-price">$20.99</p>
                 <div class="product-card__rating">
                   <div class="product-card__star-container">
                     <img class="product-card__star product-card__star--filled"
@@ -131,8 +131,8 @@
                   <img class="product-card__img" src="img/product-2.avif"
                     alt="product picture">
                 </div>
-                <h3 class="product-card__name">Green Capsicum</h3>
-                <p class="product-card__price price">$14.99</p>
+                <h3 class="product-card__name body-small">Chanise Cabbage</h3>
+                <p class="product-card__price body-medium">$14.99</p>
                 <div class="product-card__rating">
                   <div class="product-card__star-container">
                     <img class="product-card__star product-card__star--filled"
@@ -186,8 +186,8 @@
                   <img class="product-card__img" src="img/product-3.avif"
                     alt="product picture">
                 </div>
-                <h3 class="product-card__name">Green Capsicum</h3>
-                <p class="product-card__price">$14.99</p>
+                <h3 class="product-card__name body-small">Ladies Finger</h3>
+                <p class="product-card__price body-medium">$14.99</p>
                 <div class="product-card__rating">
                   <div class="product-card__star-container">
                     <img class="product-card__star product-card__star--filled"
@@ -262,6 +262,7 @@
             </div>
           </div>
         </div>
+        <!-- section-top-shop -->
         <div class="section-top-shop">
           <div class="section-top-shop__container">
             <!-- section header -->
@@ -283,52 +284,96 @@
                   <img class="categorie-card__img" src="img/categorie-1.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Vegetables</h3>
-                <p class="categorie-card__count">165 Products</p>
+                <p class="categorie-card__name body-large">Vegetables</p>
+                <p class="categorie-card__count body-small">165 Products</p>
               </div>
               <div class="top-categories__item categorie-card">
                 <div class="categorie-card__img-container">
                   <img class="categorie-card__img" src="img/categorie-2.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Fresh Fruit</h3>
-                <p class="categorie-card__count">137 Products</p>
+                <p class="categorie-card__name body-large">Fresh Fruit</p>
+                <p class="categorie-card__count body-small">137 Products</p>
               </div>
               <div class="top-categories__item categorie-card">
                 <div class="categorie-card__img-container">
                   <img class="categorie-card__img" src="img/categorie-3.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Fish</h3>
-                <p class="categorie-card__count">34 Products</p>
+                <p class="categorie-card__name body-large">Fish</p>
+                <p class="categorie-card__count body-small">34 Products</p>
               </div>
               <div class="top-categories__item categorie-card">
                 <div class="categorie-card__img-container">
                   <img class="categorie-card__img" src="img/categorie-4.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Meat</h3>
-                <p class="categorie-card__count">165 Products</p>
+                <p class="categorie-card__name body-large">Meat</p>
+                <p class="categorie-card__count body-small">165 Products</p>
               </div>
               <div class="top-categories__item categorie-card">
                 <div class="categorie-card__img-container">
                   <img class="categorie-card__img" src="img/categorie-5.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Water and Drinks</h3>
-                <p class="categorie-card__count">48 Products</p>
+                <p class="categorie-card__name body-large">Water and Drinks</p>
+                <p class="categorie-card__count body-small">48 Products</p>
               </div>
               <div class="top-categories__item categorie-card">
                 <div class="categorie-card__img-container">
                   <img class="categorie-card__img" src="img/categorie-6.svg"
                     alt="some image">
                 </div>
-                <h3 class="categorie-card__name">Snacks</h3>
-                <p class="categorie-card__count">165 Products</p>
+                <p class="categorie-card__name body-large">Snacks</p>
+                <p class="categorie-card__count body-small">165 Products</p>
               </div>
               <div class="section-top-shop__arrow-button arrow-button">
                 <img class="arrow-button__right" src="img/arrow-right.svg"
                   alt="arrow-right">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- section-intro -->
+        <div class="section-intro">
+          <div class="section-intro__container">
+            <div class="section-intro__body">
+              <div class="section-intro__pictures">
+                <div
+                  class="section-intro__img-container  section-intro__img-container--small">
+                  <img src="img/intro-img-1.avif" alt="some image">
+                </div>
+                <div
+                  class="section-intro__img-container section-intro__img-container--big">
+                  <img src="img/intro-img-2.avif" alt="some image">
+                </div>
+              </div>
+              <div class="section-intro__content">
+                <h3 class="section-intro__title heading-03">
+                  100% Trusted Organic Food Store
+                </h3>
+                <ul class="section-intro__content-items">
+                  <li class="section-intro__content-item">
+                    <p class="section-intro__text body-large">Healthy & natural
+                      food for lovers of healthy food.</p>
+                    <p class="section-intro__text body-small">Ut quis tempus
+                      erat. Phasellus euismod bibendum magna non tristique.
+                      Pellentesque semper vestibulum elit sed condimentum.
+                      Nunc pretium fermentum interdum. </p>
+                  </li>
+                  <li class="section-intro__content-item">
+                    <p class="section-intro__text body-large">Every day fresh
+                      and quality products for you.</p>
+                    <p class="section-intro__text body-small">Maecenas
+                      vehicula a justo quis laoreet. Sed in placerat nibh, a
+                      posuere ex. Morbi sem neque, aliquam sed orci et,
+                      rhoncus lobortis felis. Sed vestibulum nisl sit amet
+                      sapien.</p>
+                  </li>
+                </ul>
+                <div class="section-intro__button-block">
+                  <a class="button button--green" href="#">Shop now</a>
+                </div>
               </div>
             </div>
           </div>
