--- a/homework_10/index.html
+++ b/homework_10/index.html
@@ -97,11 +97,11 @@
                 class="section-risk-reimagined__grc-highlight product-overview">
                 <div
                   class="product-overview__img-container--z-index product-overview__img-container">
-                  <img src="/img/grc-img1-2x.avif" alt="Some image">
+                  <img src="img/grc-img1-2x.avif" alt="Some image">
                 </div>
                 <div
                   class="product-overview__img-container product-overview__img-container--img-shadow">
-                  <img src="/img/grc-shadow.avif" alt="Some image">
+                  <img src="img/grc-shadow.avif" alt="Some image">
                 </div>
                 <div class="product-overview__content-block content-block">
                   <h2 class="content-block__title">The Industry's Top-Rated GRC
@@ -138,7 +138,7 @@
                 </div>
                 <div
                   class="product-overview__img-container--shadow product-overview__img-container">
-                  <img src="/img/grc-img2-2x.avif" alt="Some image">
+                  <img src="img/grc-img2-2x.avif" alt="Some image">
                 </div>
               </div>
 
