--- a/homework_13/index.html
+++ b/homework_13/index.html
@@ -84,8 +84,9 @@
         <div class="faculty-section">
           <div class="faculty-section__container">
             <div class="faculty-section__inner">
-              <h2 class="title-section">Meet our
-                <br><strong>Professional Faculty </strong> </h2>
+              <h2 class="faculty-section__title title-section">
+                Meet our
+                <strong>Professional Faculty </strong> </h2>
               <ul class="faculty-section__cards">
                 <li class="card">
                   <div class="card__image">
@@ -101,7 +102,7 @@
                     <img src="img/expert_2.avif" alt="Image">
                   </div>
                   <h3 class="card__title">Arlene McCoy</h3>
-                  <p class="card__description">15 Year + Experience in
+                  <p>15 Year + Experience in
                     Teaching and Former RBI Grade B Employee. Have Qualified
                     USMLE Mains twice and is just like a knowledge book of
                     Economics.</p>
@@ -126,10 +127,10 @@
           <div class="faculty-in-ca-section__container">
             <div class="faculty-in-ca-section__inner">
               <div class="faculty-in-ca-section__content">
-                <h2 class="title-section title-section--dark">Best Faculty from
-                  New
-                  York is <br><strong>Now Available in California!</strong></h2>
-                <p class="faculty-in-ca-section__description">Our Faculty is
+                <h2 class="title-section title-section--dark">
+                  Best Faculty from New York is
+                  <strong>Now Available in California!</strong></h2>
+                <p>Our Faculty is
                   common in all the branches which helps us to maintain the
                   quality education across India. Now there is no need to go
                   anywhere!</p>
