--- a/homework_13/index.html
+++ b/homework_13/index.html
@@ -164,36 +164,44 @@
                   <div class="achievement-item__img">
                     <img src="img/icon_1.svg" alt="Icon">
                   </div>
-                  <div class="achievement-item__content-wrapper">
-                    <p class="achievement-item__number">2000+</p>
-                    <p class="achievement-item__desc">Selection</p>
+                  <div class="achievement-item__info">
+                    <p>
+                      <strong>2000+</strong>
+                      Selection
+                    </p>
                   </div>
                 </li>
                 <li class="achievement-item">
                   <div class="achievement-item__img">
                     <img src="img/icon_2.svg" alt="Icon">
                   </div>
-                  <div class="achievement-item__content-wrapper">
-                    <p class="achievement-item__number">10 Years +</p>
-                    <p class="achievement-item__desc">Experience faculty</p>
+                  <div class="achievement-item__info">
+                    <p>
+                      <strong>10 Years +</strong>
+                      Experience faculty
+                    </p>
                   </div>
                 </li>
                 <li class="achievement-item">
                   <div class="achievement-item__img">
                     <img src="img/icon_3.svg" alt="Icon">
                   </div>
-                  <div class="achievement-item__content-wrapper">
-                    <p class="achievement-item__number">10+</p>
-                    <p class="achievement-item__desc">Entrance Courses</p>
+                  <div class="achievement-item__info">
+                    <p>
+                      <strong>10+</strong>
+                      Entrance Courses
+                    </p>
                   </div>
                 </li>
                 <li class="achievement-item">
                   <div class="achievement-item__img">
                     <img src="img/icon_4.svg" alt="Icon">
                   </div>
-                  <div class="achievement-item__content-wrapper">
-                    <p class="achievement-item__number">100+</p>
-                    <p class="achievement-item__desc">Entrance Books</p>
+                  <div class="achievement-item__info">
+                    <p>
+                      <strong>100+</strong>
+                      Entrance Books
+                    </p>
                   </div>
                 </li>
               </ul>
