--- a/homework_13/index.html
+++ b/homework_13/index.html
@@ -156,7 +156,7 @@
         <div class="achievement-section">
           <div class="achievement-section__container">
             <div class="achievement-section__inner">
-              <h2 class="title-section title-section--small">FeatherDev Academy
+              <h2 class="achievement-section__title title-section title-section--small">FeatherDev Academy
                 is the <strong>Best USMLE/Civil Services Coaching in
                   California</strong></h2>
               <ul class="achievement-section__list">
